# src/Sonarr.Api.V3/Wanted/CutoffController.cs
@@ -1,3 +1,4 @@
+using System;
 using Microsoft.AspNetCore.Mvc;
 using NzbDrone.Core.CustomFormats;
 using NzbDrone.Core.Datastore;
@@ -24,6 +25,12 @@ namespace Sonarr.Api.V3.Wanted
             : base(episodeService, seriesService, upgradableSpecification, formatCalculator, signalRBroadcaster)
         {
             _episodeCutoffService = episodeCutoffService;
+        }
+
+        [NonAction]
+        public override ActionResult<EpisodeResource> GetResourceByIdWithErrorHandler(int id)
+        {
+            throw new NotImplementedException();
         }
 
         [HttpGet]
